# CMania

./: CMakeLists.txt  README.md  build.sh  compRun.sh  globals.c  globals.h  last_sha.txt  main.c  program  systemEssentials.c  test
curl-8.15.0_4-win64-mingw/include/: zstd.h
curl-8.15.0_4-win64-mingw/include/curl/: curl.h  mprintf.h
essentials/: systemEssentials.c  systemEssentials.h
game_offline/: game_offline_main.c  game_offline_main.h
game_offline/game_events/investment/: investment.c  investment.h
game_offline/menus/: offline_start_menu.c
game_offline/menus/offline_new_game/: offline_new_game_menu.c  offline_new_game_menu.h
game_offline/menus/offline_new_game/offline_character/: offline_character_management.c  offline_character_management.h
game_offline/menus/offline_new_game/offline_handle_new_game/: offline_handle_new_game_management.c  offline_handle_new_game_management.h
game_offline/menus/offline_settings/: offline_settings_menu.c  offline_settings_menu.h
game_offline/menus/offline_start/: offline_start_menu.c  offline_start_menu.h
game_online/: game_online_main.c  game_online_main.h
game_online/menus/: online_start_menu.c  online_start_menu.h
menus/: start_menu.c  start_menu.h
network/: system_network.c  system_network.h
terminal_runner/: terminal_utils.c  terminal_utils.h
